# goit-algo2-hw-04

./: pyproject.toml  task1.py  task1.py~  task2.py  task2.py~
